Archive2/09/eb733288be0893/output
In file included from main.cpp:2:
In file included from /usr/local/include/boost/foreach.hpp:27:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/cstddef:51:11: error: no member named 'max_align_t' in the global namespace
  using ::max_align_t;
        ~~^
main.cpp:94:26: warning: unused parameter 'x' [-Wunused-parameter]
    int g(const double & x) { return 1; }
                         ^
main.cpp:99:26: warning: unused parameter 'x' [-Wunused-parameter]
    int g(const double & x) { return 2; }
                         ^
main.cpp:137:26: warning: unused parameter 'x' [-Wunused-parameter]
    int g(const double & x) { return 1; }
                         ^
main.cpp:142:26: warning: unused parameter 'x' [-Wunused-parameter]
    int g(const double & x) { return 2; }
                         ^
main.cpp:187:14: warning: unused parameter 'argc' [-Wunused-parameter]
int main(int argc, char* argv[]) {
             ^
5 warnings and 1 error generated.
